basic-demo-scenario/01_deploy_nsxdemo.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nsxdemo
  namespace: apple
  labels:
    app: nsxdemo
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nsxdemo
  template:
    metadata:
      labels:
        app: nsxdemo
    spec:
      containers:
      - name: nsxdemo
        image: nginx:stable-alpine
        imagePullPolicy: IfNotPresent
        ports:
        - name: http
          containerPort: 80
        livenessProbe:
          httpGet:
            path: /healthz
            port: 80
          initialDelaySeconds: 3
          timeoutSeconds: 2
          failureThreshold: 2
        volumeMounts:
        - name: nginx
          mountPath: /etc/nginx
          readOnly: true
      volumes:
      - name: nginx
        configMap:
          name: nginx
