basic-demo-scenario/99_pod_debug.yaml
apiVersion: v1
kind: Pod
metadata:
  name: debug
  namespace: apple
  labels:
    app: debug
spec:
  containers:
  - image: ytsuboi/debug
    imagePullPolicy: IfNotPresent
    name: debug
