basic-demo-scenario/02_service_nsxdemo.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: apple
  name: nsxdemo
  labels:
    app: nsxdemo
spec:
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: tcp
  selector:
    app: nsxdemo
