basic-demo-scenario/04_servicelb_nsxdemo.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: apple
  name: lb-nsxdemo
  labels:
    app: nsxdemo
spec:
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: tcp
  selector:
    app: nsxdemo
  type: LoadBalancer
