basic-demo-scenario/03_ingress_nsxdemo.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nsxdemo
  namespace: apple
spec:
  rules:
  - host: nsxdemo.app.corp.local
    http:
      paths:
      - backend:
          serviceName: nsxdemo
          servicePort: 80
