basic-demo-scenario/05_netpol_nsxdemo.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: nsxdemo-allow-http
  namespace: apple
spec:
  podSelector:
    matchLabels:
      app: nsxdemo
  policyTypes:
  - Ingress
  ingress:
  - ports:
    - protocol: TCP
      port: 80
